--- a/src/app/components/icon/icon.component.html
+++ b/src/app/components/icon/icon.component.html
@@ -60,7 +60,7 @@
 
   </div>
   <div fxFlex=16>
-    <button mat-icon-button (click)="collaborator()" >
+    <button mat-icon-button (click)="collaborator(childMessage)" >
       <mat-icon>person_add</mat-icon>
     </button>
   </div>
