--- a/src/app/components/collaborators/collaborators.component.scss
+++ b/src/app/components/collaborators/collaborators.component.scss
@@ -16,7 +16,8 @@ border-radius: 15px 15px 15px 15px;
 }
 .emailList{
     border:none transparent; 
-    outline:none; font-size: 16px; 
+    outline:none; 
+    font-size: 16px; 
     font-family: sans-serif;
     width:100%;
 }
