--- a/src/app/components/create-label/create-label.component.html
+++ b/src/app/components/create-label/create-label.component.html
@@ -1,5 +1,5 @@
 <div fxFlex=100 fxFlex.xs=100>
-  <mat-card>
+  <mat-card class="update-card" >
     <div>
       <mat-card-title>
         <h5>Edit labels</h5>
