--- a/src/app/components/diaplay-note/diaplay-note.component.scss
+++ b/src/app/components/diaplay-note/diaplay-note.component.scss
@@ -36,6 +36,18 @@
     max-height: 25px;
     overflow: hidden;
 }
+.collaborator{
+    margin-right: 5px;
+    margin-bottom: 8px;
+}
+.remainder{
+    margin-right: 5px;
+    margin-bottom: 8px;
+}
+.label{
+    margin-right: 5px;
+    margin-bottom: 8px;
+}
 div .icon{
     visibility: hidden;
 }
