--- a/src/app/components/profile-pic/profile-pic.component.html
+++ b/src/app/components/profile-pic/profile-pic.component.html
@@ -12,11 +12,9 @@
     <div class="button" fxLayout="row" fxLayoutAlign="center center">
       <mat-card-content>
        
-            <input hidden type="file" #uploader (change)="getprofilephoto($event)" 
+            <input  type="file"  (change)="getprofilephoto($event)" 
             color=""  accept="image/*"/>
-            <button class="upload" (click)="uploader.click()" >
-                Upload a photo
-            </button>
+            
        
           
       </mat-card-content>
