--- a/src/app/components/collaborators/collaborators.component.scss
+++ b/src/app/components/collaborators/collaborators.component.scss
@@ -10,9 +10,26 @@
     
 
 }
+.colla-list{
+    margin-bottom:5px;
+}
 
 .collaborators{
 border-radius: 15px 15px 15px 15px;    
+}
+.mat-icon{
+    height:10px;
+    width:10px;
+    font-size: 16px;  //minimize  mat-icons are only by using font-size...
+
+}
+.round-image{
+    width: 50px;
+    height: 50px;
+    background:#aecbfa;
+    border-radius: 50%;
+    border:none transparent;
+    outline: none;
 }
 .emailList{
     border:none transparent; 
