--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,6 +1,7 @@
 .search{
     width : 100%;
-    //background-color: rgb(245, 237, 228);
+    border-radius: 10px;
+    //background:rgba(245, 240, 240, 0.04);
 
 }
 .sidenavbar{
@@ -9,11 +10,17 @@
 .note{
   padding: 0px 50px 0px 50px;
 }
+.header{
+  margin-top: 7px;
+}
 .remainder{
   margin-top: 8px;
   margin-bottom: 8px;
   padding: 0px 50px 0px 50px;
 
+}
+.grid-list{
+  margin-left:15px;
 }
 .archive{
   margin-top: 8px;
@@ -45,15 +52,7 @@
 ::ng-deep .mat-form-field-wrapper{
     padding-bottom: 0px;
 }
-// .round{
-//     // margin-left: -30px;
-// }
-// .profile-pic{
-//   width:100%;
-//   height: 100%;
-//   max-width: 100%;
-//   max-height: 100%;
-// }
+
 .footer{
   width:100%;
   height: 100%;
@@ -109,27 +108,7 @@
     border-top-right-radius: 32px;
     
 }
-// .sidenav-list ::ng-deep .mat-button-focus-overlay {
-//   background-color:#feefc3;
-// }
 
-
-// .mat-button-focus-overlay { 
-//   background-color: transparent!important; 
-//   }
-
-
-// .mat-button,
-// .mat-icon-button {
-//   &.cdk-focused,
-//   &.cdk-program-focused {
-//     background-color: none !important;
-
-//     .mat-button-focus-overlay {
-//       display: none !important;
-//     }
-//   }
-// }
 
 ::ng-deep .mat-button-focus-overlay 
 { 
@@ -182,3 +161,56 @@
     padding:0px 16px 0px 16px;
   }
  
+  @media(max-width:450px){
+    .fun-img{
+      display: none;
+    }
+    .grid-list{
+      display: none;
+    }
+    .header{
+      display: none;
+    }
+    .search{
+      display:none;
+    }
+  }
+
+  @media (min-width:450px) and (max-width:600px){
+    .fun-img{
+      display: none;
+    }
+    .grid-list{
+      display: none;
+    }
+    .header{
+      display: none;
+    }
+    .search{
+      width:50%;
+      margin-left:40px
+    }
+  }
+  @media (max-width:800px) and (min-width:600px){
+    // .header{
+    //   display: none;
+    // }
+  }
+  @media (max-width:960px)  and (min-width:600px) {
+    .fun-img{
+      margin-left:10px;
+    }
+    .grid-list{
+      margin-left:80px;
+
+    }
+    .header{
+      margin-left:10px;
+
+    }
+    .search{
+      //margin-left:60px;
+      width:100%;
+
+    }
+  }
