--- a/src/app/components/take-note/take-note.component.html
+++ b/src/app/components/take-note/take-note.component.html
@@ -1,6 +1,6 @@
 <div class="main" fxFlex=100 fxFlex.xs=80 fxLayout="row" fxLayoutAlign="center center" fxLayoutAlign.xs="center center" >
   <mat-card fxLayout="column" fxLayoutAlign="center center" fxLayoutAlign.xs="center center" class="note-card" fxFlex=50 fxFlex.md=80 fxFlex.sm=75
-    fxFlex.xs=70>
+    fxFlex.xs=100  [ngStyle]="{'background-color':setcolor }" >
     <div *ngIf="!isOpen" (click)='isOpen=true' class="heading" fxLayout="row" fxLayoutAlign="start center">
       <h5>Take a Note..</h5>
     </div>
@@ -12,8 +12,8 @@
             style=" border:none transparent; outline:none; font-size: 16px; font-family: sans-serif;" required>
         </div>
         <div>
-          <button mat-icon-button (click)="isPinned()">
-            <mat-icon><img src="../../../assets/images/images.png" height="25px" width="25px"></mat-icon>
+          <button mat-icon-button (click)="isPinned()"  >
+            <mat-icon><img src="../../../assets/svg-icons/now using.svg" height="25px" width="25px"></mat-icon>
           </button>
         </div>
       </div>
@@ -29,7 +29,7 @@
       <div>
         <div fxLayout="row" fxLayoutAlign="space-between center">
           <div class="icon">
-            <app-icon></app-icon>
+            <app-icon (colorChange)='setColor($event)'  ></app-icon>
           </div>
           <div>
             <button type="text" (click)="isOpen=false" (click)="addNote()" fxLayoutAlign="end center"
