Pinned and Unpinned done

--- a/src/app/components/archive-note/archive-note.component.html
+++ b/src/app/components/archive-note/archive-note.component.html
@@ -1,2 +1,3 @@
 
-<app-diaplay-note [allCards]="archiveNotes"> </app-diaplay-note>
+<app-diaplay-note [allCards]="archiveNotes"  [pinnedNotes]="pinnedNotes" [unpinnedNotes]="unPinnedNotes" >
+     </app-diaplay-note>
