--- a/src/app/components/trash-note/trash-note.component.html
+++ b/src/app/components/trash-note/trash-note.component.html
@@ -1,2 +1,4 @@
 
-<app-diaplay-note [allCards]="trashNotes"> </app-diaplay-note>
+<app-diaplay-note [allCards]="trashNotes" [pinnedNotes]="pinedNotes" [unpinnedNotes]="unPinnedNotes" > 
+
+</app-diaplay-note>
