--- a/src/app/components/collaborators/collaborators.component.html
+++ b/src/app/components/collaborators/collaborators.component.html
@@ -1,4 +1,4 @@
-<div class="collaborators" fxFlex=100>
+<div class="collaborators" fxFlex=100 fxFlex.sm=50 fxFlex.md=50 fxFlex.xs=50 >
     <div>
       <h3>Collaborators</h3>
     </div>
