--- a/src/app/components/diaplay-note/diaplay-note.component.scss
+++ b/src/app/components/diaplay-note/diaplay-note.component.scss
@@ -66,7 +66,14 @@ div:hover .icon{
     margin:6px 6px 6px 6px;
 }
 
-
+@media (min-width:350px) and (max-width:600px){
+    
+    .cards{
+        width:94%;
+        margin-left: 0px;
+        
+    }
+}
 
 
 
