--- a/src/app/components/collaborators/collaborators.component.html
+++ b/src/app/components/collaborators/collaborators.component.html
@@ -53,7 +53,7 @@
 
     <div fxLayout="row" fxLayoutAlign="end end" fxLayoutGap="60px"  >
         <button type="text" class="save" (click)="cancel()"  >Cancel</button>
-        <button type="text" class="save" (click)="addCollabrator()" >Save</button>
+        <button type="text" class="save" (click)="save()" >Save</button>
     </div>
 
 </div>
