--- a/src/app/components/trash-note/trash-note.component.html
+++ b/src/app/components/trash-note/trash-note.component.html
@@ -1,4 +1,4 @@
 
-<app-diaplay-note [allCards]="trashNotes" [pinnedNotes]="pinedNotes" [unpinnedNotes]="unPinnedNotes" > 
+<app-diaplay-note [allCards]="trashNotes"  [pinnedNotes]="trashNotes" [unpinnedNotes]="unPinnedNotes" > 
 
 </app-diaplay-note>
