--- a/src/app/components/archive-note/archive-note.component.html
+++ b/src/app/components/archive-note/archive-note.component.html
@@ -1,3 +1,3 @@
 
-<app-diaplay-note [allCards]="archiveNotes"  [pinnedNotes]="pinnedNotes" [unpinnedNotes]="unPinnedNotes" >
+<app-diaplay-note [allCards]="archiveNotes"  [pinnedNotes]="archiveNotes" [unpinnedNotes]="unPinnedNotes" >
      </app-diaplay-note>
