--- a/src/app/components/diaplay-note/diaplay-note.component.html
+++ b/src/app/components/diaplay-note/diaplay-note.component.html
@@ -66,10 +66,14 @@
 
 
 <div class="notes" fxFlex=100 style="justify-content: center;" fxLayout="row wrap"  fxLayout.xs="column" fxLayout.sm="row wrap" fxLayout.md="row wrap">
-    <div *ngIf="pinnedNotes.length > 0" style="justify-content: center;" fxLayout="row wrap"  fxLayout.xs="column" fxLayout.sm="row wrap" fxLayout.md="row wrap"  >Pinned
-                <div *ngFor="let note of pinnedNotes" class="container" fxLayoutGap="2px">
+    <div *ngIf="pinnedNotes.length > 0" style="justify-content: center;" fxLayout="row wrap"  fxLayout.xs="column" fxLayout.sm="row wrap" fxLayout.md="row wrap"  >
+        <div>
+            Pinned
+        </div>        
+        <div *ngFor="let note of pinnedNotes" class="container" fxLayoutGap="2px"
+        [ngClass]="choice ? 'gridView':'listView'">
                 
-
+               
                    
                         <mat-card class="cards" [ngStyle]="{'background-color': note.color}">
 
@@ -81,7 +85,7 @@
                                     </mat-card-title>
                                 </div>
                                 <div class="pinned" >
-                                    <button mat-icon-button (click)="isPined(note)" >
+                                    <button mat-icon-button (click)="isUnPined(note)" >
                                         <mat-icon><img src="../../../assets/svg-icons/now using.svg"  height="25px" width="25px">
                                         </mat-icon>
                                     </button>
@@ -129,7 +133,12 @@
 
                 </div>
     </div>
-    <div *ngIf="unpinnedNotes.length > 0" style="justify-content: center;" fxLayout="row wrap"  fxLayout.xs="column" fxLayout.sm="row wrap" fxLayout.md="row wrap"  >Others
+    
+    <div *ngIf="unpinnedNotes.length > 0" style="justify-content: center;" fxLayout="row wrap"  fxLayout.xs="column" fxLayout.sm="row wrap" fxLayout.md="row wrap"  >
+        <div >
+            Others
+        </div>
+        
             <div *ngFor="let note of unpinnedNotes" class="container" fxLayoutGap="2px">
             
 
