--- a/src/app/components/serch-notes/serch-notes.component.html
+++ b/src/app/components/serch-notes/serch-notes.component.html
@@ -1,3 +1,3 @@
 <div fxFlex=100 fxFlexAlign="center center" >
-  <app-diaplay-note [allCards]="card"> </app-diaplay-note>
+  <app-diaplay-note [allCards]="card" [pinnedNotes]="card" [unpinnedNotes]="unPinnedNotes" > </app-diaplay-note>
 </div>
