--- a/src/app/components/icon/icon.component.html
+++ b/src/app/components/icon/icon.component.html
@@ -86,7 +86,7 @@
 
   </div>
   <div fxFlex=16>
-    <button mat-icon-button (click)='archiveNote()'>
+    <button mat-icon-button (click)='archiveNote()' (click)='unArchiveNote()' >
       <mat-icon>archive</mat-icon>
     </button>
 
