grid-list working correctly..

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -32,10 +32,10 @@
 
       <div class="grid-list" fxFlex=18 fxFlex.md=5 fxFlex.sm=20 fxFlex.xs=4>
         
-        <button mat-icon-button fxHide="true" *ngIf='isView==false' (click)="grid_list()">
+        <button mat-icon-button  *ngIf='isView' (click)="grid_list()">
           <mat-icon>view_agenda</mat-icon>
         </button>
-        <button mat-icon-button fxHide="false"  *ngIf='isView==true' (click)="grid_list()">
+        <button mat-icon-button   *ngIf='!isView' (click)="grid_list()">
           <mat-icon >grid_on</mat-icon>
         </button>
         
