Completed Fundoo Notes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <router-outlet></router-outlet> 
-<!-- <app-collaborators></app-collaborators> -->
+<!-- <app-update-remainder-notes></app-update-remainder-notes> -->
