--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -4,6 +4,9 @@
     //background:rgba(245, 240, 240, 0.04);
 
 }
+.datails{
+
+}
 .sidenavbar{
   //padding: 0px 40px;
 }
@@ -53,10 +56,7 @@
     padding-bottom: 0px;
 }
 
-.footer{
-  width:100%;
-  height: 100%;
-}
+
 .profile-image{
   margin-right: 20px;
   margin-left: 20px;
@@ -66,9 +66,9 @@
 .footer{
   width:100%;
   height: 100%;
-  margin-right: 20px;
-  margin-left: 20px;
-  margin-bottom: 20px;
+  margin-right: 12px;
+  // margin-left: 20px;
+  //margin-bottom: 20px;
 }
 .round{
   font-size: 14px;
