--- a/src/app/components/update-note/update-note.component.html
+++ b/src/app/components/update-note/update-note.component.html
@@ -9,7 +9,7 @@
                 </div>
                 <div>
                   <button mat-icon-button (click)="isPinned()">
-                    <mat-icon><img src="../../../assets/images/images.png" height="25px" width="25px"></mat-icon>
+                    <mat-icon><img src="../../../assets/svg-icons/now using.svg" height="25px" width="25px"></mat-icon>
                   </button>
                 </div>
             </div>  
