--- a/src/app/components/profile-pic/profile-pic.component.scss
+++ b/src/app/components/profile-pic/profile-pic.component.scss
@@ -13,8 +13,17 @@
 .button{
     margin-top: 45px;
     margin-bottom: 45px;
+    
 
 }
+// input{
+//     height:20px; 
+//     width:100px; 
+//     margin: -20px -50px; 
+//     position:relative;
+//     top:50%; 
+//     left:50%;
+// }
 .upload{
     position: absolute;
   top: 50%;
