--- a/src/app/components/collaborators/collaborators.component.scss
+++ b/src/app/components/collaborators/collaborators.component.scss
@@ -1,13 +1,8 @@
+@import '../../../scss/mixins.scss';
+
 .divider{
-    //padding: 0px 40px 0px 0px;
-    top:10px;
-    width:100%;
-    height:1px;
-    margin-left:auto;
-    margin-right: auto;
-    margin-bottom: 10px;
-    background-color: rgba(0,0,0,.28)
-    
+   
+    @include divider;    
 
 }
 .colla-list{
