--- a/src/app/components/icon/icon.component.scss
+++ b/src/app/components/icon/icon.component.scss
@@ -1,3 +1,5 @@
+@import '../../../scss/varibles.scss';
+
 .material-icons{
     height:24px !important;
     width:24px !important;
@@ -15,8 +17,8 @@
     margin-left:auto;
     margin-right: auto;
     margin-bottom: 10px;
-    background-color: rgba(0,0,0,.28)
-    
+    // background-color: rgba(0,0,0,.28)
+    background-color: $background-color;
 
 }
 ::ng-deep .mat-button{
