--- a/src/app/components/diaplay-note/diaplay-note.component.scss
+++ b/src/app/components/diaplay-note/diaplay-note.component.scss
@@ -8,11 +8,10 @@
     border-radius: 15px;
     
 }
-// .pin_other{
-//     // margin-left:185px;
-//     position:relative;
-//     left:250px;
-// }
+.pin_other{
+    width: 100%;
+   text-align:left;
+}
 
 .title{
     border:none transparent;
@@ -63,11 +62,11 @@
         border-radius: 15px;
         
     }
-    // .pin_other{
+    .pin_other{
         
-    //     position:relative;
-    //     left:250px;
-    // }
+        position:relative;
+        left:160px;
+    }
     
 }
 .listView{
